syntax = "proto3";
package soarchain.did;

option go_package = "soarchain/x/did/types";

message Reputation {
  string index = 1; 
  string address = 2;
  string score = 4;
  string rewardMultiplier = 5;
  string netEarnings = 6;
  string lastTimeChallenged = 7;
  string coolDownTolerance = 8;
}

